# SistemasOperacionais-Trabalho2---Theads

./: CMakeLists.txt
Controller/: Cardapio.h  Cozinha.h  HostessConect.h  Pedido.h
Main/: main.cpp
Model/: Item.h  Mesa.h
